EBR-101. Fix description not showing for component and input ports

--- a/style/ComponentInfo.css
+++ b/style/ComponentInfo.css
@@ -4,7 +4,7 @@
     border: 2px solid rgba(0, 253, 232, .5) !important;
     border-radius: 1px !important;
     opacity: 0.99 !important;
-    width: 450px;
+    width: 600px;
     position: absolute;
     top: calc(-250px - 2.5rem);
     left: -50%;
